feat: 🎸 add tags to dashboard listing page

--- a/src/plugins/dashboard/public/application/listing/dashboard_listing_ng_wrapper.html
+++ b/src/plugins/dashboard/public/application/listing/dashboard_listing_ng_wrapper.html
@@ -1,6 +1,7 @@
 <dashboard-listing
   core="core"
   create-item="create"
+  render-tags="renderTags"
   get-view-url="getViewUrl"
   edit-item="editItem"
   find-items="find"
