feat: 🎸 integrate tag picker into dashboard listing page

--- a/src/plugins/dashboard/public/application/listing/dashboard_listing_ng_wrapper.html
+++ b/src/plugins/dashboard/public/application/listing/dashboard_listing_ng_wrapper.html
@@ -2,6 +2,7 @@
   core="core"
   create-item="create"
   render-tags="renderTags"
+  tag-picker="tagPicker"
   get-view-url="getViewUrl"
   edit-item="editItem"
   find-items="find"
