[Discover] move fetching methods

--- a/src/plugins/discover/public/application/angular/context.html
+++ b/src/plugins/discover/public/application/angular/context.html
@@ -2,6 +2,7 @@
   anchor-id="contextAppRoute.anchorId"
   columns="contextAppRoute.state.columns"
   index-pattern="contextAppRoute.indexPattern"
+  index-pattern-id="contextAppRoute.indexPatternId"
   app-state="contextAppRoute.state"
   state-container="contextAppRoute.stateContainer"
   filters="contextAppRoute.filters"
