--- a/src/plugins/discover/public/application/angular/context_app.html
+++ b/src/plugins/discover/public/application/angular/context_app.html
@@ -3,11 +3,13 @@
   filter="contextApp.actions.addFilter"
   hits="contextApp.state.rows.all"
   index-pattern="contextApp.indexPattern"
+  index-pattern-id="contextApp.indexPatternId"
   app-state="contextApp.appState"
   state-container="contextApp.stateContainer"
   sorting="contextApp.state.queryParameters.sort"
   columns="contextApp.state.queryParameters.columns"
   minimum-visible-rows="contextApp.state.rows.all.length"
+  anchor-id="contextApp.anchorId"
   anchor-status="contextApp.state.loadingStatus.anchor.status"
   anchor-reason="contextApp.state.loadingStatus.anchor.reason"
   default-step-size="contextApp.state.queryParameters.defaultStepSize"
