--- a/src/plugins/discover/public/application/angular/context.html
+++ b/src/plugins/discover/public/application/angular/context.html
@@ -1,11 +1,4 @@
-<context-app
-  anchor-id="contextAppRoute.anchorId"
-  columns="contextAppRoute.state.columns"
+<context-app-legacy
   index-pattern="contextAppRoute.indexPattern"
   index-pattern-id="contextAppRoute.indexPatternId"
-  app-state="contextAppRoute.state"
-  state-container="contextAppRoute.stateContainer"
-  filters="contextAppRoute.filters"
-  predecessor-count="contextAppRoute.state.predecessorCount"
-  successor-count="contextAppRoute.state.successorCount"
-  sort="contextAppRoute.state.sort"></context-app>
+  anchor-id="contextAppRoute.anchorId"></context-app-legacy>
