[Discover] add useDataGridColumns test, update by comments

--- a/src/plugins/discover/public/application/angular/context_app.html
+++ b/src/plugins/discover/public/application/angular/context_app.html
@@ -8,6 +8,7 @@
   sorting="contextApp.state.queryParameters.sort"
   columns="contextApp.state.queryParameters.columns"
   minimum-visible-rows="contextApp.state.rows.all.length"
+  anchor-id="contextApp.anchorId"
   anchor-status="contextApp.state.loadingStatus.anchor.status"
   anchor-reason="contextApp.state.loadingStatus.anchor.reason"
   default-step-size="contextApp.state.queryParameters.defaultStepSize"
